--- a/ramesh/index.html
+++ b/ramesh/index.html
@@ -23,7 +23,7 @@
 						<p>Project 1</p>
 						<p>Project Name: ZWAN</p>
 						<p>Employer: American Megatrends India PVT Ltd</p>
-						<p>Environment: React JS, Material UI, GraphQL , Typescript.</p>
+						<p>Environment: React JS, Material UI, GraphQL , Typescript, HTML, Bootstrap</HTml:5>.</p>
 						<p>Database: Mongo DB.</p>
 						<p>Container: Docker.</p>
 						<p>Role: Full stack Developer</p>
