--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,13 @@
     
     <body> 
         <h2> Assignment 4 - Opensource </h2>
-        <div class="div">Hello this is my OSSE Assignment</div>
-        <p>Branchchanges</p>
+        <div class="div">Hello this is OSSE Assignment</div>
+        <p>The Owner is Himanshu Chaurasia 
+                        And Contributors are
+                        Nirupam Kumar Sinha 
+                        Ramesh Krishnan
+                        Sulaxman K 
+                        Srividya Gopala
+                        </p>
         </body>
 </html>
