--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,13 @@
     <body> 
         <h2> Assignment 4 - Opensource </h2>
         <div class="div">Hello this is my OSSE Assignment</div>
-        <p>Branchchanges</p>
+        <p>The Project owner is Himanshu Chaurasia
+           Collaborators are 
+                -   Ramesh Krishnan 
+                -   Nirupam Kumar Sinha
+                -   Sulaxman K 
+                -   Srivindya Gopal 
+                
+                        </p>
         </body>
 </html>
